fix jumping footer bug

--- a/public/sass/_animation.sass
+++ b/public/sass/_animation.sass
@@ -59,8 +59,3 @@
 
 .fadeOut
   +animation(fadeOut 0.5s ease-in-out, true)
-
-.longFadeIn
-  opacity: 0
-  +animation(fadeIn 0.5s ease-in-out 3.5s, true)
-
