--- a/public/sass/portfolio.sass
+++ b/public/sass/portfolio.sass
@@ -17,6 +17,7 @@ body
   vertical-align: middle
 
 .mainFooter
+  opacity: 0
   clear: both
   padding-top: 4em
   width:  100%
